{
  "butter": "Butter",
  "header": "Your decentralized social network",
  "signUp": "Sign up",
  "importMnemonic": "Import Secret Recovery Phrase",
  "connectLedger": "Connect Ledger"
}
