{
  "confirm": "Confirm",
  "settings": "Settings",
  "next": "Next",
  "retry": "Retry",
  "accept": "Accept",
  "yes": "Yes",
  "ok": "Ok",
  "no": "No",
  "n/a": "N/A",
  "submit": "Submit",
  "cancel": "Cancel",
  "no nickname": "nickname-not-set",
  "refuse": "Refuse",
  "success": "Success",
  "failed": "Failed",
  "oops": "Oops!",
  "DSM": "DSM",
  "explore now": "Explore Now",
  "welcomeTitle": "Welcome to Mooncake",
  "welcomeSubtitle": "Spread your wings, connect with kindred spirits, and share your vibrant stories!",
  "error": "Error",
  "field required": "This field is required.",
  "message": "Message",
  "skip": "Skip",
  "delete": "Delete",
  "please wait": "Please wait...",
  "resume": "Resume",
  "authorize": "Authorize",
}
