{
  "header": "Select a Profile",
  "noNickname": "[No nickname set]"
}
