{
  "header": "Aaaah!",
  "description": "No profile dTag detected.\nCreate a profile now.",
  "createDesmosProfile": "Create a Desmos Profile"
}
