import {by, device, element, expect} from 'detox';
import {getLocal} from 'mockttp';
import {
  DETOX_DEV_MNEMONIC,
  DETOX_MOCK_ACCOUNT,
} from '../__mocks__/E2EVariableMocks';
import launchAppConfig from '../config';
import {MockGraphQLServer} from '../__mocks__/MockGraphQLServer';

const mockRESTServer = getLocal();

describe('Login flow', () => {
  beforeAll(async () => {
    // mock all the REST resources the test scenario needs
    // These REST resources will not change for all test scenarios, so it is okay
    // to put them in beforeAll and afterAll
    await mockRESTServer
      .forGet('http://localhost:4001/nonce/desmos123')
      .thenJson(200, {nonce: '123123123'});

    await mockRESTServer
      .forPost('http://localhost:4001/login')
      .thenJson(200, {token: 'i-am-a-token'});

    await mockRESTServer
      .forPost('http://localhost:4001/session')
      .thenReply(200);

    await mockRESTServer
      .forPost('http://localhost:4001/notifications/tokens')
      .thenReply(200);

    await mockRESTServer.start(4001);
  });

  afterAll(() => {
    mockRESTServer.stop();
  });

  beforeEach(async () => {
    // Make sure to clean the app
    await device.uninstallApp();
    await device.installApp();
    await device.launchApp(launchAppConfig);
  });

  /**
   * Reusable flow that carries out the following flow:
   * OnBoarding -> SignUp -> MnemonicInput
   */
  const goToImportRecoveryPhraseScreen = async () => {
    await element(by.text('Skip')).tap();
    await expect(element(by.text('Butter'))).toBeVisible();
    await expect(
      element(by.text('Your decentralized social network')),
    ).toBeVisible();
    await expect(element(by.text('Sign up'))).toBeVisible();
    await expect(
      element(by.text('Import Secret Recovery Phrase')),
    ).toBeVisible();
    await element(by.text('Import Secret Recovery Phrase')).tap();
    // Mnemonic
    await expect(element(by.text('Recovery Phrase'))).toBeVisible();
    await expect(element(by.id('mnemonicInput'))).toBeVisible();
  };

  it('Goes through the login flow, inserting a mnemonic and a password, selecting a profile, reaching the home screen correctly', async () => {
    // setup graphql mocks for this test instance
    const mocks = {
      query_root: () => ({
        profile: () => [DETOX_MOCK_ACCOUNT],
      }),
    };

    const mockGraphQLServer = MockGraphQLServer.createServerWithMocks(mocks);

    await mockGraphQLServer.startServer();

    // e2e test will try to find this nickname on the SelectDTag screen
    const {nickname} = DETOX_MOCK_ACCOUNT;
    const mockPassword = 'this is my password';

    // Onboarding
    await goToImportRecoveryPhraseScreen();

    await element(by.id('mnemonicInput')).tap();
    await element(by.id('mnemonicInput')).typeText(DETOX_DEV_MNEMONIC);
    await element(by.id('loginCheckbox')).tap();
    await element(by.text('Next')).tap();
    // Password
    await expect(element(by.text('Set Up Password'))).toBeVisible();
    await expect(element(by.id('newPasswordField'))).toBeVisible();
    await expect(element(by.id('confirmPasswordField'))).toBeVisible();
    await element(by.id('newPasswordField')).tap();
    await element(by.id('newPasswordField')).typeText(mockPassword);
    await element(by.id('confirmPasswordField')).tap();
    await element(by.id('confirmPasswordField')).typeText(mockPassword);
    await element(by.text('Next')).tap();
    // Select profile
    await expect(element(by.text('Select a Profile'))).toBeVisible();
    await expect(element(by.text(nickname))).toBeVisible();
    await element(by.text(nickname)).tap();
    // Expect to be inside the homescreen
    await expect(element(by.id('homeView'))).toBeVisible();

    // stop all server mocks
    await mockGraphQLServer.stopServer();
  });

  it('Goes through the login flow, inserting a mnemonic and a password, expecting no profiles available', async () => {
    // setup graphql mocks for this test instance
    const mocks = {
      query_root: () => ({
        profile: () => [],
      }),
    };

    const mockGraphQLServer = MockGraphQLServer.createServerWithMocks(mocks);

    await mockGraphQLServer.startServer();

    // Onboarding
    await goToImportRecoveryPhraseScreen();

    await element(by.id('mnemonicInput')).tap();
    await element(by.id('mnemonicInput')).typeText(DETOX_DEV_MNEMONIC);
    await element(by.id('loginCheckbox')).tap();
    await element(by.text('Next')).tap();
    // Password
    await expect(element(by.text('Set Up Password'))).toBeVisible();
    await expect(element(by.id('newPasswordField'))).toBeVisible();
    await expect(element(by.id('confirmPasswordField'))).toBeVisible();
    await element(by.id('newPasswordField')).tap();
    await element(by.id('newPasswordField')).typeText('this is my password');
    await element(by.id('confirmPasswordField')).tap();
    await element(by.id('confirmPasswordField')).typeText(
      'this is my password',
    );
    await element(by.text('Next')).tap();
    // Expect no profiles are available
    await expect(element(by.text('Create a Desmos Profile'))).toBeVisible();

    // stop all mock servers
    await mockGraphQLServer.stopServer();
  });
});
